@@ -83,4 +83,64 @@ class ClustersController < ApplicationController
     end
   end
   
+  def updateinfo
+    
+    uri = URI.parse("http://directorio.garumfundatio.org/clusters.json")
+
+    post_body = []
+    post_body << "Content-Type: text/plain\r\n"
+
+    http = Net::HTTP.new(uri.host, uri.port)
+    request = Net::HTTP::Get.new(uri.request_uri)
+    request.body = post_body.join
+    request["Content-Type"] = "text/plain"
+  
+    res = Net::HTTP.new(uri.host, uri.port).start {|http| http.request(request) }
+    case res
+    when Net::HTTPSuccess, Net::HTTPRedirection
+      #puts "fue bien (#{res.body})"
+      
+      clusters = JSON.parse(res.body)
+      puts ("#{clusters.inspect} <---------")
+ 
+      clusters.each{ |key|
+        puts ("#{key.inspect}")
+        puts ("#{key['cluster'].inspect} <------ datos")
+        puts ("#{key['cluster']['id']}")
+        
+        cluster = Cluster::find_by_id(key['cluster']['id'])
+        if (cluster == nil)
+          puts ("nuevo cluster #{key['cluster']['id']}")
+          cluster = Cluster::new
+          cluster.id = key['cluster']['id']
+          cluster.nombre = key['cluster']['nombre']
+          cluster.desc = key['cluster']['desc']
+          cluster.empresas = key['cluster']['empresas']
+          cluster.url = key['cluster']['url']
+          cluster.activo = 'S'
+          cluster.miclave = 'secreta'
+          cluster.suclave = 'secreta'
+          cluster.created_at = key['cluster']['created_at']
+          cluster.updated_at = key['cluster']['updated_at']         
+          cluster.save
+        else
+          puts ("actualizo cluster #{key['cluster']['id']}")
+          cluster.nombre = key['cluster']['nombre']
+          cluster.desc = key['cluster']['desc']
+          cluster.empresas = key['cluster']['empresas']
+          cluster.url = key['cluster']['url']
+          cluster.updated_at = key['cluster']['updated_at']         
+          cluster.save          
+        end
+
+      }
+ 
+    else
+      puts res.error!
+    end
+
+    render 
+
+  end 
+  
 end
