@@ -1,0 +1,5 @@
+<br/>
+<br/>
+<br/>
+
+Actualizada la información con el directorio de bazares. 
