@@ -85,6 +85,7 @@
 				  <li><%= link_to "Configuración del Sistema", confs_path %> </li>
 				  <li><%= link_to "Gestión Bazares", clusters_path %> </li>
 				  <li><%= link_to "Notificacion a Usuarios", '/notificacion?tipo=N' %> </li>
+				  <li><%= link_to "Actualización Información", '/updateinfo' %> </li>
 	            </ul>
 
 				<% end %>
