@@ -1,3 +1,11 @@
+
+2010-12-19 
+----------
+
+* Incluido Gestión de bazares
+* Actualización remota del directorio de bazares 
+* Primera versión distribuida de busquedas 
+
 2010-12-07 
 ----------
 
